LaTeX-ify introduction

--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -4,52 +4,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Problem\n",
+    "# Solving a Causal Problem with `causalprog`\n",
     "\n",
-    "This notebook demonstrates how to use causalprog to approximate bounds for a simple problem.\n",
+    "This notebook demonstrates how to use `causalprog` to compute bounds on the causal estimand for a simple causal problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "For the following distributions\n",
+    "## Problem Setup and Analytic Solution\n",
     "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "X &\\sim \\mathcal{N}(\\mu_{x}, 1.0) \\\\\n",
-    "Y \\mid X &\\sim \\mathcal{N}(X, \\nu_{y})\n",
-    "\\end{aligned}\n",
-    "$$\n",
+    "We will assume that we have the following random variables;\n",
     "\n",
-    "we wish to calculate bounds for the causal estimand\n",
+    "\\begin{align*}\n",
+    "X \\sim \\mathcal{N}(\\mu_X, 1.0),\n",
+    "&\\quad \n",
+    "Y \\mid X \\sim \\mathcal{N}(X, \\nu_Y)\n",
+    "\\end{align*}\n",
     "\n",
-    "$$ \\sigma(\\mu_{x}, \\nu_{y}) = \\mathbb{E}[Y]$$\n",
+    "where $\\mu_X$ and $\\nu_Y$ are the parameters for our problem.\n",
+    "Our causal estimand $\\sigma$ is given by\n",
     "\n",
-    "given observed data (constraints)\n",
+    "\\begin{align*}\n",
+    "\\sigma(\\mu_X, \\nu_Y) = \\mathbb{E}[Y],\n",
+    "\\end{align*}\n",
     "\n",
-    "$$ \\phi(\\mu_{x}, \\nu_{y}) = \\mathbb{E}[X]$$\n",
+    "which we can analytically compute to be $\\sigma(\\mu_X, \\nu_Y) = \\mu_X$.\n",
+    "The quantities predicted by our data $\\phi_{obs}$ (which form our constraints) are given by\n",
     "\n",
-    "and tolerance in the observed data $\\epsilon$.\n",
+    "\\begin{align*}\n",
+    "\\phi(\\mu_X, \\nu_Y) = \\mathbb{E}[X],\n",
+    "\\end{align*}\n",
     "\n",
-    "Therefore we aim to solve the following\n",
+    "where again we can analytically compute that $\\phi(\\mu_X, \\nu_Y) = \\mu_X$.\n",
+    "We'll also assume that we have some tolerance $\\epsilon$ in our data.\n",
     "\n",
-    "$$ \\mathrm{max}/\\mathrm{min}_{\\mu_{x}, \\nu_{y}} \\mu_{x}, \\quad\n",
-    "\\text{subject to } \\vert \\mu_{x} - \\phi_{obs} \\vert \\leq \\epsilon.\n",
-    "$$\n",
+    "Thus, we're aiming to solve the following optimisation problems;\n",
     "\n",
-    "The solution to this is $\\mu_{x}^{*} = \\phi_{obs} \\pm \\epsilon $    \n",
-    "The value of $\\nu_{y}$ can be any positive value, since in this\n",
-    "setup both $\\phi$ and $\\sigma$ are independent of it.\n",
+    "\\begin{align*}\n",
+    "\\max/\\min_{\\mu_X, \\nu_Y} \\sigma\n",
+    "&= \\max/\\min_{\\mu_X, \\nu_Y} \\mu_X, \\\\\n",
+    "\\text{subject to } \\quad \\vert \\phi(\\mu_X, \\nu_Y) - \\phi_{obs} \\vert &= \\vert \\mu_X - \\phi_{obs} \\vert \\leq \\epsilon.\n",
+    "\\end{align*}\n",
+    "\n",
+    "The solution to this is $\\mu_X^{*} = \\phi_{obs} \\pm \\epsilon$ (with addition in the maximisation case).\n",
+    "The value of $\\nu_Y$ can be any positive value, since both $\\phi$ and $\\sigma$ are independent of it.\n",
     "\n",
     "The corresponding Lagrangians are: \n",
     "\n",
-    "$$ \\mathcal{L}_{\\min}(\\mu_{x}, \\nu_{y}, \\lambda) =  \\mu_{x}\n",
-    "+ \\lambda(|\\mu_{x} - \\phi_{obs}| - \\epsilon) \\qquad \\lambda \\geq 0 $$\n",
+    "\\begin{align*}\n",
+    "\\mathcal{L}_{\\min}(\\mu_X, \\nu_Y, \\lambda) =  \\mu_X\n",
+    "+ \\lambda(|\\mu_X - \\phi_{obs}| - \\epsilon), \\\\\n",
+    "\\mathcal{L}_{\\max}(\\mu_X, \\nu_Y, \\lambda) = - \\mu_X\n",
+    "+ \\lambda(|\\mu_X - \\phi_{obs}| - \\epsilon)\n",
+    "\\end{align*}\n",
     "\n",
-    "$$ \\mathcal{L}_{\\max}(\\mu_{x}, \\nu_{y}, \\lambda) = - \\mu_{x}\n",
-    "+ \\lambda(|\\mu_{x} - \\phi_{obs}| - \\epsilon) \\qquad \\lambda \\geq 0 $$\n",
+    "where we require that $\\lambda\\geq 0$ in each case (to obtain a stationary point of the correct orientation).\n",
+    "The KKT (primal-dual) solutions are $(\\mu_X^*, \\nu_Y, \\lambda^*) = (\\phi_{obs} \\pm \\epsilon, \\nu_Y, 1)$.\n",
     "\n",
-    "\n",
-    "With KKT (primal-dual) solutions $(\\mu_{x}^*, \\nu_{y}, \\lambda^*) = (\\phi_{obs} \\pm \\epsilon, \\nu_{y}, 1)$\n",
-    "\n",
-    "In this notebook, with assistance from causalprog, we will attempt to find this solution using the naive approach of minimising  $\\| \\nabla \\mathcal{L} \\|_2^2$.\n",
-    "\n"
+    "In this notebook, with assistance from `causalprog`, we will attempt to find this solution using the naive approach of minimising  $\\| \\nabla \\mathcal{L} \\|_2^2$."
    ]
   },
   {
@@ -85,7 +100,7 @@
     "### Setting Distribution Parameters\n",
     "\n",
     "1. **Decision Parameters**  \n",
-    "e.g. $\\mu_{x}$, $\\nu_{y}$\n",
+    "e.g. $\\mu_X$, $\\nu_Y$\n",
     "   - Add a `ParameterNode`.  \n",
     "   - Reference it in the `parameters` dictionary of the corresponding `DistributionNode`.\n",
     "\n",
@@ -166,7 +181,7 @@
     "\n",
     "To do so, we define our constraints with `Constraint` and our causal estimand with `CausalEstimand`.  \n",
     "\n",
-    "Each `Constraint` requires a function to calculate the constrained quantity, e.g. $\\mu_{x}$, from samples of the graph. In the function, we reference nodes with the labels we assigned previously (\"X\" and \"Y\").  \n",
+    "Each `Constraint` requires a function to calculate the constrained quantity, e.g. $\\mu_X$, from samples of the graph. In the function, we reference nodes with the labels we assigned previously (\"X\" and \"Y\").  \n",
     "\n",
     "Likewise, each `CausalEstimand` requires a function to calculate the causal estimand, e.g. $\\mu_{y}$, from samples of the graph. Again, we use the labels we assigned previously.\n",
     "\n",
@@ -336,7 +351,7 @@
     "Notice that the result we found for the minimum bound is incorrect. \n",
     "This is because\n",
     "\\begin{align*}\n",
-    "\\frac{\\partial \\mathcal{L}_{\\min}}{\\partial \\mu_{x}}(\\mu_x, \\nu_y, \\lambda) \n",
+    "\\frac{\\partial \\mathcal{L}_{\\min}}{\\partial \\mu_X}(\\mu_x, \\nu_y, \\lambda) \n",
     "\\Big|_{\\phi_{\\text{obs}} = 0,\\, \\epsilon = 1}\n",
     "&= 1 + \\lambda \\operatorname{sign}(\\mu_x) \\\\[12pt]\n",
     "\\frac{\\partial \\mathcal{L}_{\\min}}{\\partial \\lambda}(\\mu_x, \\nu_y, \\lambda)\n",
@@ -346,8 +361,8 @@
     "\n",
     "Which means that both \n",
     "$$\n",
-    "(\\mu_{x}=1, \\lambda=-1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0 \\\\[12pt]\n",
-    "(\\mu_{x}=-1, \\lambda=1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0\n",
+    "(\\mu_X=1, \\lambda=-1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0 \\\\[12pt]\n",
+    "(\\mu_X=-1, \\lambda=1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0\n",
     "$$\n",
     "\n",
     "Clearly this is not ideal. \n",
