Tidy graph construction section

--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -71,9 +71,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building the Graph\n",
+    "## Building the Graph\n",
     "\n",
-    "Before solving, we must define the problem's corresponding DAG."
+    "To setup a problem in `causalprog`, we need to construct the Directed Acyclic Graph (DAG) that represents the causal problem.\n",
+    "The `Graph` class is how DAGs are represented in `causalprog`."
    ]
   },
   {
@@ -84,7 +85,8 @@
    "source": [
     "from causalprog.graph import Graph\n",
     "\n",
-    "# First initialise the graph\n",
+    "# Initialises the graph. Note that this graph currently doesn't\n",
+    "# have any nodes or edges in it!\n",
     "graph = Graph(label=\"two_normal_graph\")"
    ]
   },
@@ -92,26 +94,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding Nodes\n",
-    "For each distribution in the causal graph (`X` and `Y` in our case), add a `DistributionNode`.\n",
+    "#### Adding Nodes\n",
     "\n",
-    "Then, we must set the parameters for our distributions.\n",
+    "For each parameter and random variable (RV) in our causal problem, we need a node to represent it.\n",
     "\n",
-    "### Setting Distribution Parameters\n",
+    "1. **Parameters** are represented with `ParameterNode`s.\n",
+    "   - In our example, these are the values $\\mu_X$ and $\\nu_Y$.\n",
+    "   - For each of these, we add a `ParameterNode`.  \n",
+    "   - Parameters that are referenced in the `parameters` dictionary of a `DistributionNode` will be used when constructing the `DistributionNode`'s RV.\n",
     "\n",
-    "1. **Decision Parameters**  \n",
-    "e.g. $\\mu_X$, $\\nu_Y$\n",
-    "   - Add a `ParameterNode`.  \n",
-    "   - Reference it in the `parameters` dictionary of the corresponding `DistributionNode`.\n",
+    "2. **Derived Parameters** are parameters of RVs that are the result of sampling from a previous distribution.\n",
+    "   - In our example, the mean of $Y$ is such a quantity. This quantity is determined by the RV $X$.\n",
+    "   - Derived parameters should be provided to the `parameters` argument of a `DistributionNode`, and are stored in its eponymous attribute.\n",
     "\n",
-    "2. **Derived Parameters**  \n",
-    "e.g. $\\mu_{y}$\n",
-    "   - If a parameter is the result of a previous distribution,  \n",
-    "     reference the corresponding `DistributionNode` in the `parameters` dictionary.\n",
-    "\n",
-    "3. **Constant Parameters**  \n",
-    "e.g. $\\nu_{x}$\n",
-    "   - Set directly in the `constant_parameters` dictionary of the `DistributionNode`\n",
+    "1. **Constant Parameters** are constant values that appear in the problem, but are still needed to construct some of the RVs.\n",
+    "   - In our example, the (co)variance of $X$ is a constant parameter, taking the value $1$.\n",
+    "   - These values should be passed to the `constant_parameters` argument of a `DistributionNode`, and are stored in its eponymous attribute.\n",
     "\n"
    ]
   },
@@ -125,24 +123,24 @@
     "\n",
     "from causalprog.graph import DistributionNode, ParameterNode\n",
     "\n",
-    "graph.add_node(ParameterNode(label=\"X_mean\"))\n",
+    "graph.add_node(ParameterNode(label=\"mu_X\"))\n",
     "graph.add_node(\n",
     "    DistributionNode(\n",
     "        distribution=Normal,\n",
     "        label=\"X\",\n",
-    "        constant_parameters={\"scale\": 1},  # Set X std to 1\n",
-    "        parameters={\"loc\": \"X_mean\"},  # Set X mean as result of ParameterNode X_mean\n",
+    "        constant_parameters={\"scale\": 1},  # Variance of X is constant\n",
+    "        parameters={\"loc\": \"mu_X\"},  # Mean of X is given by mu_X\n",
     "    )\n",
     ")\n",
     "\n",
-    "graph.add_node(ParameterNode(label=\"Y_cov\"))\n",
+    "graph.add_node(ParameterNode(label=\"nu_Y\"))\n",
     "graph.add_node(\n",
     "    DistributionNode(\n",
     "        distribution=Normal,\n",
     "        label=\"Y\",\n",
     "        parameters={\n",
-    "            \"loc\": \"X\",  # Set Y mean as result of DistributionNode X\n",
-    "            \"scale\": \"Y_cov\",  # Set Y std as result of ParameterNode Y_cov\n",
+    "            \"loc\": \"X\",  # Mean of Y determined by the RV X\n",
+    "            \"scale\": \"nu_Y\",  # Variance of Y is given by nu_Y\n",
     "        },\n",
     "    )\n",
     ")"
@@ -152,9 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding Edges\n",
+    "#### Adding Edges\n",
     "\n",
-    "We must add edges to the graph to define the relationships between nodes. "
+    "We must add edges between nodes in the graph to allow it to pick up connections between parameters and RVs.\n",
+    "\n",
+    "Note that edges should be directed **into** the dependent RV.\n",
+    "Parameters use the convention that edges from them point towards RVs that use them in their construction."
    ]
   },
   {
@@ -163,12 +164,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DistributionNode edges\n",
+    "# We know Y | X, so the edge is directed X -> Y\n",
     "graph.add_edge(\"X\", \"Y\")\n",
     "\n",
-    "# ParameterNode edges\n",
-    "graph.add_edge(\"X_mean\", \"X\")\n",
-    "graph.add_edge(\"Y_cov\", \"Y\")"
+    "# Parameters should point to the RVs they are used to define\n",
+    "graph.add_edge(\"mu_X\", \"X\")\n",
+    "graph.add_edge(\"nu_Y\", \"Y\")"
    ]
   },
   {
@@ -481,14 +482,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "causal-continuum",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython"
+    "name": "ipython",
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
