LaTeX-ify solver sections

--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding Nodes\n",
+    "### Adding Nodes\n",
     "\n",
     "For each parameter and random variable (RV) in our causal problem, we need a node to represent it.\n",
     "\n",
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding Edges\n",
+    "### Adding Edges\n",
     "\n",
     "We must add edges between nodes in the graph to allow it to pick up connections between parameters and RVs.\n",
     "\n",
@@ -176,18 +176,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining the Problem\n",
+    "## Defining the Problem\n",
     "\n",
-    "We can now use the graph to define the problem we wish to solve.\n",
+    "We can now use our graph to define the problem we wish to solve.\n",
+    "To do so, we define our constraints using the `Constraint` class, and our causal estimand with the `CausalEstimand` class.  \n",
     "\n",
-    "To do so, we define our constraints with `Constraint` and our causal estimand with `CausalEstimand`.  \n",
+    "Each `Constraint` requires a function to calculate the constrained quantity, e.g. $\\mathbb{E}[X]$, from samples (from RVs) of the graph.\n",
+    "In the function, we reference nodes with the labels we assigned previously (`\"X\"` and `\"Y\"`).  \n",
     "\n",
-    "Each `Constraint` requires a function to calculate the constrained quantity, e.g. $\\mu_X$, from samples of the graph. In the function, we reference nodes with the labels we assigned previously (\"X\" and \"Y\").  \n",
+    "Likewise, each `CausalEstimand` requires a function to calculate the causal estimand, $\\mathbb{E}[Y]$, from samples (from RVs) of the graph.\n",
+    "Again, we use the labels we assigned previously.\n",
     "\n",
-    "Likewise, each `CausalEstimand` requires a function to calculate the causal estimand, e.g. $\\mu_{y}$, from samples of the graph. Again, we use the labels we assigned previously.\n",
-    "\n",
-    "We then use our `Constraint` and `CausalEstimand` to define our problem with `CausalProblem`.  \n",
-    "\n"
+    "We then pass our `Constraint`s and `CausalEstimand` to the `CausalProblem` class.  "
    ]
   },
   {
@@ -223,15 +223,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculating the Bounds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Solving the Causal Problem\n",
+    "\n",
     "Now we calculate the bounds of the causal estimand.\n",
-    "To do this, we'll seek the stationary points of the Lagrangian, using the naive approach of minimising $\\| \\nabla \\mathcal{L} \\|_2^2$.\n"
+    "To do this, we'll seek the stationary points of the Lagrangian, using the naive approach of minimising $\\| \\nabla \\mathcal{L} \\|_2^2$.\n",
+    "\n",
+    "`causalprog` provides a few out-of-the-box solvers that we can utilise, and the `CausalProblem` class can construct some helpful functions for us to use, like the Lagrangian $\\mathcal{L}$ for our problem!"
    ]
   },
   {
@@ -253,8 +250,8 @@
     "# Define our initial guess for the decision variables and lagrange multiplier\n",
     "LAGRANGE_MULTIPLIER_INIT = jnp.atleast_1d(0.5)\n",
     "INIT_PARAMS = {\n",
-    "    \"X_mean\": 0.0,\n",
-    "    \"Y_cov\": 1.0,\n",
+    "    \"mu_X\": 0.0,\n",
+    "    \"nu_Y\": 1.0,\n",
     "}\n",
     "\n",
     "# Choose stochastic gradient descent settings\n",
@@ -266,18 +263,22 @@
     "\n",
     "# Define a function to find a bound using a naive Lagrangian approach\n",
     "def naive_lagrangian_approach(maximum_problem: bool) -> SolverResult:\n",
+    "    # Have the CasualProblem class construct the Lagrangian for us.\n",
+    "    # We can specify here whether we are seeking the maximum or minimum\n",
+    "    # bound for the Causal Estimand.\n",
     "    lagrangian = causal_problem.lagrangian(\n",
     "        n_samples=300,\n",
     "        maximum_problem=maximum_problem,\n",
     "    )\n",
     "\n",
-    "    # Define the objective function for optimization\n",
-    "    # arg x structure should match stochastic_gradient_descent arg initial_guess\n",
+    "    # Define the objective function for optimization.\n",
+    "    # Our naive approach requires us to minimise the L2-norm of the Lagrangian's\n",
+    "    # gradient.\n",
     "    def objective(x: npt.ArrayLike, key: jax.Array) -> npt.ArrayLike:\n",
     "        v = jax.grad(lagrangian, argnums=(0, 1))(*x, rng_key=key)\n",
     "        return l2_normsq(v)\n",
     "\n",
-    "    # Run the optimisation\n",
+    "    # Invoke the SDG solver to return the solution.\n",
     "    return stochastic_gradient_descent(\n",
     "        obj_fn=objective,\n",
     "        initial_guess=(INIT_PARAMS, LAGRANGE_MULTIPLIER_INIT),\n",
@@ -298,23 +299,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Observing the Results\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each `stochastic_gradient_descent` returns a `SolverResult` object. The `SolverResult` stores results and details of the optimisation.  \n",
+    "### Interpreting the Results\n",
     "\n",
-    "The attributes of `SolverResult` that are most relevant to this example notebook are:\n",
+    "`causalprog`'s solvers, like `stochastic_gradient_descent`, return a `SolverResult` object.\n",
+    "The `SolverResult` stores helpful information about the optimisation process.  \n",
+    "\n",
+    "The attributes of `SolverResult` that are most relevant are:\n",
     "\n",
     "- `fn_args`: The objective arguments at the final iteration. \n",
     "- `obj_val`: The objective value at `fn_args`.\n",
     "- `fn_args_history`: The history of `fn_args` at each iteration that the optimisation is logged. \n",
     "- `obj_val_history`: The history of `obj_val` at each iteration that the optimisation is logged. \n",
     "\n",
-    "We will use these to define a function that outputs the best results of our solver. "
+    "We can inspect these attributes to display the results of our optimisation."
    ]
   },
   {
@@ -328,7 +325,8 @@
     "from causalprog.solvers.solver_result import SolverResult\n",
     "\n",
     "\n",
-    "# We define a function to print the results of the SGD runs given the SolverResult\n",
+    "# Since we want to print results for both the maximisation and minimisation problem,\n",
+    "# we'll define a function to print the results of the SGD runs given the SolverResult\n",
     "def print_sgd_results(result: SolverResult, maximum_problem: bool = True) -> None:\n",
     "    \"\"\"Print the results of the stochastic gradient descent runs.\"\"\"\n",
     "    if maximum_problem:\n",
@@ -350,21 +348,7 @@
    "metadata": {},
    "source": [
     "Notice that the result we found for the minimum bound is incorrect. \n",
-    "This is because\n",
-    "\\begin{align*}\n",
-    "\\frac{\\partial \\mathcal{L}_{\\min}}{\\partial \\mu_X}(\\mu_x, \\nu_y, \\lambda) \n",
-    "\\Big|_{\\phi_{\\text{obs}} = 0,\\, \\epsilon = 1}\n",
-    "&= 1 + \\lambda \\operatorname{sign}(\\mu_x) \\\\[12pt]\n",
-    "\\frac{\\partial \\mathcal{L}_{\\min}}{\\partial \\lambda}(\\mu_x, \\nu_y, \\lambda)\n",
-    "\\Big|_{\\phi_{\\text{obs}} = 0,\\, \\epsilon = 1}\n",
-    "&= |\\mu_x| - 1\n",
-    "\\end{align*}\n",
-    "\n",
-    "Which means that both \n",
-    "$$\n",
-    "(\\mu_X=1, \\lambda=-1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0 \\\\[12pt]\n",
-    "(\\mu_X=-1, \\lambda=1) \\implies \\| \\nabla \\mathcal{L}_{\\min} \\|_2^2 = 0\n",
-    "$$\n",
+    "This is because both $(\\mu_X, \\lambda) = (1, -1)$ and $(\\mu_X, \\lambda) = (1, 1)$ provide us with $\\vert \\nabla \\mathcal{L}_{\\min} \\vert _2^2 = 0$.\n",
     "\n",
     "Clearly this is not ideal. \n",
     "To combat this, we could retry the search with multiple starting points, select the best one we find and hope it's optimal.\n",
@@ -376,16 +360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recalculating the Bounds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The advantage of stochastic gradient descent is that we can customise the objective function to anything we like.  \n",
+    "### Solving In a Smarter Way\n",
     "\n",
-    "Given that this problem is convex, finite, and satisfies Slater's condition, we can use an objective function that targets the KKT conditions directly.  \n",
+    "`causalprog` provides us with a fast assembly of function that are relevant to the optimisation problem we need to solve.\n",
+    "But we are free to further manipulate these functions to suit our particular problem.\n",
+    "\n",
+    "Given that our problem is convex, finite, and satisfies Slater's condition, we can use an objective function that targets the KKT conditions directly.  \n",
     "If these conditions are met, our solution will be optimal. "
    ]
   },
@@ -477,27 +457,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have found the correct bounds! 🎉\n"
+    "We have found (an approximation to) the correct bounds! 🎉\n"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "causal-continuum",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+    "name": "ipython"
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "nbconvert_exporter": "python"
   }
  },
  "nbformat": 4,
