Clarify edges that are being added

--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -152,10 +152,13 @@
    "source": [
     "### Adding Edges\n",
     "\n",
-    "We must add edges between nodes in the graph to allow it to pick up connections between parameters and RVs.\n",
+    "We must add edges between nodes in the graph to allow it to pick up connections between parameters and RVs, and derived parameters and other RVs.\n",
+    "There is no need to add nodes for constant parameters (nor a need for edges to have these constants picked up by the nodes that use them).\n",
     "\n",
     "Note that edges should be directed **into** the dependent RV.\n",
-    "Parameters use the convention that edges from them point towards RVs that use them in their construction."
+    "That is, `DistributionNode`s should have edges directed into them from the nodes referenced by their derived parameters.\n",
+    "These nodes may be either `ParameterNode`s; for example our RV $X$ will need an edge from the `ParameterNode` for $\\mu_X$ into the `DistributionNode` representing $X$.\n",
+    "They may also be other `DistributionNode`s; for example, $Y$ has $X$ as a derived parameter since we know that $Y \\vert X \\sim \\mathcal{N}(X, \\nu_Y)$."
    ]
   },
   {
