--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -365,7 +365,7 @@
    "source": [
     "### Solving In a Smarter Way\n",
     "\n",
-    "`causalprog` provides us with a fast assembly of function that are relevant to the optimisation problem we need to solve.\n",
+    "`causalprog` provides us with an easy way to assemble functions that are relevant to the optimisation problem we need to solve.\n",
     "But we are free to further manipulate these functions to suit our particular problem.\n",
     "\n",
     "Given that our problem is convex, finite, and satisfies Slater's condition, we can use an objective function that targets the KKT conditions directly.  \n",
