Language for parameters has been decided

--- a/examples/two_normal.ipynb
+++ b/examples/two_normal.ipynb
@@ -25,6 +25,10 @@
     "\\end{align*}\n",
     "\n",
     "where $\\mu_X$ and $\\nu_Y$ are the parameters for our problem.\n",
+    "\n",
+    "**Note:** to disambiguate between terms, `causalprog` refers to $\\mu_X$ and $\\nu_Y$ as the **model parameters**.\n",
+    "Model parameters are the variables that fully define the model described in the causal problem (equivalently that parameterise the RVs that appear in the DAG).\n",
+    "\n",
     "Our causal estimand $\\sigma$ is given by\n",
     "\n",
     "\\begin{align*}\n",
@@ -98,16 +102,17 @@
     "\n",
     "For each parameter and random variable (RV) in our causal problem, we need a node to represent it.\n",
     "\n",
-    "1. **Parameters** are represented with `ParameterNode`s.\n",
+    "1. **Model Parameters** are represented with `ParameterNode`s. The model parameters are the set of variables that fully parametrise the (RVs that appear in the) DAG / causal problem.\n",
     "   - In our example, these are the values $\\mu_X$ and $\\nu_Y$.\n",
-    "   - For each of these, we add a `ParameterNode`.  \n",
-    "   - Parameters that are referenced in the `parameters` dictionary of a `DistributionNode` will be used when constructing the `DistributionNode`'s RV.\n",
+    "   - For each of these, we add a `ParameterNode`. \n",
+    "   - Model parameters that are referenced in the `parameters` dictionary of a `DistributionNode` will be used when constructing the `DistributionNode`'s RV.\n",
     "\n",
-    "2. **Derived Parameters** are parameters of RVs that are the result of sampling from a previous distribution.\n",
+    "2. **Derived (RV) Parameters** are parameters of RVs that are the result of sampling from a previous distribution, or take the value of a model parameter.\n",
     "   - In our example, the mean of $Y$ is such a quantity. This quantity is determined by the RV $X$.\n",
+    "   - Also in our example, the mean of $X$ is such a quantity, being determined by $\\mu_X$ (a model parameter).\n",
     "   - Derived parameters should be provided to the `parameters` argument of a `DistributionNode`, and are stored in its eponymous attribute.\n",
     "\n",
-    "1. **Constant Parameters** are constant values that appear in the problem, but are still needed to construct some of the RVs.\n",
+    "1. **Constant (RV) Parameters** are constant values that appear in the problem, but are still needed to construct some of the RVs.\n",
     "   - In our example, the (co)variance of $X$ is a constant parameter, taking the value $1$.\n",
     "   - These values should be passed to the `constant_parameters` argument of a `DistributionNode`, and are stored in its eponymous attribute.\n",
     "\n"
